reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__replay__report.rs_line_161_col_5.log

*** crates/tracewake-core/src/replay/report.rs:161:5: replace classify_state_diff_family -> ReplayDivergenceFieldFamily with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/replay/report.rs
+++ replace classify_state_diff_family -> ReplayDivergenceFieldFamily with Default::default()
@@ -153,37 +153,17 @@
         .map(|event| event.event_id.as_str().to_string());
     Some(ReplayDivergenceDetail {
         first_divergent_event_id,
         field_family: classify_state_diff_family(first_diff),
     })
 }
 
 fn classify_state_diff_family(diff: &str) -> ReplayDivergenceFieldFamily {
-    if diff.starts_with("actors ") {
-        ReplayDivergenceFieldFamily::Actor
-    } else if diff.starts_with("places ") {
-        ReplayDivergenceFieldFamily::Place
-    } else if diff.starts_with("doors ") {
-        ReplayDivergenceFieldFamily::Door
-    } else if diff.starts_with("containers ") {
-        ReplayDivergenceFieldFamily::Container
-    } else if diff.starts_with("items ") {
-        ReplayDivergenceFieldFamily::Item
-    } else if diff.starts_with("food_supplies ") {
-        ReplayDivergenceFieldFamily::FoodSupply
-    } else if diff.starts_with("workplaces ") {
-        ReplayDivergenceFieldFamily::Workplace
-    } else if diff.starts_with("sleep_affordances ") {
-        ReplayDivergenceFieldFamily::SleepAffordance
-    } else if diff.starts_with("need_model ") {
-        ReplayDivergenceFieldFamily::NeedModel
-    } else {
-        ReplayDivergenceFieldFamily::Unknown
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
     use crate::actions::pipeline::{run_pipeline, PipelineContext};
     use crate::actions::proposal::{Proposal, ProposalOrigin};
     use crate::actions::registry::ActionRegistry;


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ReplayDivergenceFieldFamily: Default` is not satisfied
   --> crates/tracewake-core/src/replay/report.rs:161:5
    |
161 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ReplayDivergenceFieldFamily`
   --> crates/tracewake-core/src/replay/report.rs:12:1
    |
 12 | pub enum ReplayDivergenceFieldFamily {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `replay::report::ReplayDivergenceFieldFamily: Default` is not satisfied
   --> crates/tracewake-core/src/replay/report.rs:161:5
    |
161 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `replay::report::ReplayDivergenceFieldFamily`
   --> crates/tracewake-core/src/replay/report.rs:12:1
    |
 12 | pub enum ReplayDivergenceFieldFamily {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
